Added preview canvas and changed pattern

--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
 
 
             <div class="stuff">
-              Stuff
+              <canvas id="previewCanvas" width="32" height="32"></canvas>
               <canvas id="mainCanvas" 
                 width ="700" 
                 height="700">
