--- a/test/index.html
+++ b/test/index.html
@@ -8,9 +8,10 @@
 <body>
     <div id="mocha"></div>
     <script src="lib/mocha/mocha.js"></script>
-    <script>mocha.setup('bdd')</script>
+    <script>mocha.setup('bdd');</script>
 
     <!-- include source files here... -->
-    <script data-main="lib/test_config.js" src="../app/components/requirejs/require.js"></script>
+    <script data-main="lib/test_config.js" 
+      src="../app/components/requirejs/require.js"></script>
 </body>
 </html>
